# conductor-pm

./: .gitignore  README.md  data.db  docker-compose.yml  nx.json  package-lock.json  package.json
.husky/: pre-commit
.storybook/: preview.tsx
prisma/: schema.prisma
prisma/migrations/20250203065639_init/: migration.sql
prisma/migrations/20250206032132_add_chat_threads/: migration.sql
python_service/: .env.example  .gitignore  Dockerfile  agent.py  pyproject.toml
python_service/src/: agent.py
python_service/src/database/: prisma_client.py
python_service/src/integrations/: notion_client.py  openai_client.py
python_service/src/jobs/: __init__.py  job_manager.py
python_service/src/server/: __init__.py  run.py  server.py
python_service/src/utils/: cache.py
src/: app.tsx  index.html  index.ts
src/lib/: index.ts
src/lib/api/: consts.ts  contracts.ts
src/lib/api/chat/: client.ts  contracts.ts  index.ts  types.ts
src/lib/api/data/: client.ts  context-types.ts  contracts.ts  types.ts
src/lib/contexts/: ChatContext.tsx  ColorModeContext.tsx  DataContext.tsx  SPAContext.tsx  ToastContext.tsx  index.ts
src/lib/hooks/: index.ts  useWelcome.tsx
src/lib/hooks/chat/: useChat.ts
src/lib/hooks/data/: useData.ts
src/lib/hooks/landing/: index.ts  useWelcome.tsx
src/lib/screens/: SPA.tsx  Startup.tsx  Welcome.tsx  index.ts
src/lib/screens/chat/: ChatScreen.tsx
src/lib/screens/data/: DataFetchScreen.tsx
src/lib/screens/landing/: StartupScreen.tsx  WelcomeScreen.tsx  index.ts
src/lib/ui/: index.ts
src/lib/ui/components/: index.ts
(+200 files in other folders)
